# Infernus-V3-hmmm-version

./: .gitignore  CMakeLists.txt  Infernus.cpp  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Infernus/: CMakeLists.txt
Client/Infernus/Category/: CMakeLists.txt  Category.cpp  Category.h
Client/Infernus/Hook/: CMakeLists.txt  Hook.cpp  Hook.h
Client/Infernus/Hook/Hooks/: CMakeLists.txt
Client/Infernus/Hook/Hooks/Entity/: CMakeLists.txt  Entity.cpp  Entity.h
Client/Infernus/Hook/Hooks/GameMode/: CMakeLists.txt  GameMode.cpp  GameMode.h
Client/Infernus/Hook/Hooks/Key/: CMakeLists.txt  Key.cpp  Key.h
Client/Infernus/Hook/Hooks/Mouse/: CMakeLists.txt  Mouse.cpp  Mouse.h
Client/Infernus/Hook/Hooks/SwapChain/: CMakeLists.txt  SwapChain.cpp  SwapChain.h
Client/Infernus/Manager/: CMakeLists.txt  Manager.cpp  Manager.h
Client/Infernus/Module/: CMakeLists.txt  Module.cpp  Module.h
Client/Infernus/Module/Modules/: CMakeLists.txt
Client/Infernus/Module/Modules/Combat/: CMakeLists.txt  Hitbox.cpp  Hitbox.h  Killaura.cpp  Killaura.h
Client/Mem/: CMakeLists.txt  Mem.cpp  Mem.h
Client/SDK/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
Client/SDK/Classes/: Actor.cpp  Actor.h  CMakeLists.txt  ClientInstance.cpp  ClientInstance.h  GameMode.h  GuiData.h  Level.cpp  Level.h  LevelRenderer.cpp  LevelRenderer.h  MinecraftGame.h  Player.cpp  Player.h
Client/Utils/: CMakeLists.txt  RenderUtils.cpp  RenderUtils.h  Utils.cpp  Utils.h
Includes/: CMakeLists.txt
Includes/imgui/: CMakeLists.txt  DroidSans.hpp
Includes/kiero/: CMakeLists.txt
(+23 files in other folders)
